--- a/lite/Admin/uploads.html
+++ b/lite/Admin/uploads.html
@@ -9,20 +9,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.png">
-    <title>Create Exam | Afternoon Prep</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
+    <title>Uploads | Afternoon Prep</title>
     <!-- Bootstrap Core CSS -->
-    <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- chartist CSS -->
-    <link href="../assets/plugins/chartist-js/dist/chartist.min.css" rel="stylesheet">
-    <link href="../assets/plugins/chartist-js/dist/chartist-init.css" rel="stylesheet">
-    <link href="../assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" rel="stylesheet">
-    <!--This page css - Morris CSS -->
-    <link href="../assets/plugins/c3-master/c3.min.css" rel="stylesheet">
+    <link href="../../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
-    <link href="css/colors/blue.css" id="theme" rel="stylesheet">
+    <link href="../css/colors/blue.css" id="theme" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -57,16 +51,14 @@
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
 
                     <!-- Light Logo icon -->
-                    <img src="../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                    <img src="../../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
                 </b>
                     <!--End Logo icon -->
                     <!-- Logo text --><span>
 
                          <!-- Light Logo text -->
-                         <!--<img src="../assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a>-->
-                                            <span style="color: white;"> <b>Afternoon</b>Prep</span>
-
-            </div>
+                        <span style="color: white;"> <b>Afternoon</b>Prep</span>
+             </div>
             <!-- ============================================================== -->
             <!-- End Logo -->
             <!-- ============================================================== -->
@@ -93,7 +85,7 @@
                     <!-- Profile -->
                     <!-- ============================================================== -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../assets/images/users/1.jpg" alt="user" class="profile-pic m-r-10" />EkeneDee</a>
+                        <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../../assets/images/users/1.jpg" alt="user" class="profile-pic m-r-10" />EkeneDee</a>
                     </li>
                 </ul>
             </div>
@@ -156,10 +148,10 @@
             <!-- ============================================================== -->
             <div class="row page-titles">
                 <div class="col-md-5 col-8 align-self-center">
-                    <h3 class="text-themecolor m-b-0 m-t-0">Exams</h3>
+                    <h3 class="text-themecolor m-b-0 m-t-0">Uploads</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Exams</li>
+                        <li class="breadcrumb-item active">Uploads</li>
                     </ol>
                 </div>
                 <div class="col-md-7 col-4 align-self-center">
@@ -176,68 +168,48 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-block">
-                            Create your exam
-                            <form id="form" action="">
-                                <select name="exams" class="btn btn-block" id="exam-type">
-                                    <option value="Choose Exam Type" selected>Choose Exam type</option>
-                                    <option value="JAMB">JAMB</option>
-                                    <option value="WASSCE">WASSCE</option>
-                                    <option value="GCE">GCE</option>
-                                    <option value="IELTS">IELTS</option>
-                                    <option value="TOEFL">TOEFL</option>
-                                    <option value="GMAT">GMAT</option>
-                                </select>
-                                <select name="year" class="btn btn-block" id="exam-year">
-                                    <option value="" selected>Choose the year</option>
-                                    <option value="2018">2018</option>
-                                    <option value="2017">2017</option>
-                                    <option value="2016">2016</option>
-                                    <option value="2015">2015</option>
-                                    <option value="2014">2014</option>
-                                    <option value="2013">2013</option>
-                                    <option value="2012">2012</option>
-                                    <option value="2011">2011</option>
-                                    <option value="2010">2010</option>
-                                    <option value="2009">2009</option>
-                                    <option value="2008">2008</option>
-                                    <option value="2007">2007</option>
-                                    <option value="2006">2006</option>
-                                    <option value="2005">2005</option>
-                                    <option value="2004">2004</option>
-                                    <option value="2003">2003</option>
-                                    <option value="2002">2002</option>
-                                    <option value="2001">2001</option>
-                                    <option value="2000">2000</option>
-                                    <option value="1999">1999</option>
-                                    <option value="1998">1998</option>
-                                    <option value="1997">1997</option>
-                                    <option value="1996">1996</option>
-                                    <option value="1995">1995</option>
-                                    <option value="1994">1994</option>
-                                    <option value="1993">1993</option>
-                                    <option value="1992">1992</option>
-                                    <option value="1991">1991</option>
-                                    <option value="1990">1990</option>
-                                </select>
-                                <select name="number" class="btn btn-block" id="no-of-questions">
-                                    <option value="" selected>Select Number of Questions</option>
-                                    <option value="30">30</option>
-                                    <option value="40">40</option>
-                                    <option value="50">50</option>
-                                    <option value="60">60</option>
-                                    <option value="70">70</option>
-                                    <option value="80">80</option>
-                                    <option value="90">90</option>
-                                    <option value="100">100</option>
-                                </select>
-                                <br>
-                                <div>
-                                    <p>Already have the question in latex format?</p>
-                                    <input type="file" class="btn btn-bs">Upload</input>
+                            <div class="col-lg-8 col-xlg-9 col-md-7">
+                                <div class="card">
+                                    <!-- Nav tabs -->
+                                    <ul class="nav nav-tabs profile-tab" role="tablist">
+                                    <!-- Tab panes -->
+                                    <div class="tab-content">
+                                        <div class="tab-pane active" id="home" role="tabpanel">
+                                            <div class="card-block">
+                                                <div class="profiletimeline">
+                                                    <div class="sl-item">
+                                                        <div class="sl-left"> <img src="../../assets/images/users/1.jpg" alt="user" class="img-circle"> </div>
+                                                        <div class="sl-right">
+                                                            <div><a href="#" class="link">Jumoke</a> <span class="sl-date">5 minutes ago</span>
+                                                                <p>assign a new task <a href="#"> Uploaded a new document</a></p>
+                                                                <div class="row">
+                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../../assets/images/big/img1.jpg" alt="user" class="img-responsive radius"></div>
+                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../../assets/images/big/img2.jpg" alt="user" class="img-responsive radius"></div>
+                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../../assets/images/big/img3.jpg" alt="user" class="img-responsive radius"></div>
+                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../../assets/images/big/img4.jpg" alt="user" class="img-responsive radius"></div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <hr>
+                                                    <div class="sl-item">
+                                                        <div class="sl-left"> <img src="../../assets/images/users/1.jpg" alt="user" class="img-circle"> </div>
+                                                        <div class="sl-right">
+                                                            <div><a href="#" class="link">Chimezie</a> <span class="sl-date">5 minutes ago</span>
+                                                                <p>assign a new task <a href="#"> Uploaded a new image</a></p>
+                                                                <div class="row">
+                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../../assets/images/big/img1.jpg" alt="user" class="img-responsive radius"></div>
+                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../../assets/images/big/img4.jpg" alt="user" class="img-responsive radius"></div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <br>
-                                <input type="submit" class="btn btn-skype" value="Submit">
-                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -269,31 +241,20 @@
 <!-- ============================================================== -->
 <!-- All Jquery -->
 <!-- ============================================================== -->
-<script src="../assets/plugins/jquery/jquery.min.js"></script>
+<script src="../../assets/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap tether Core JavaScript -->
-<script src="../assets/plugins/bootstrap/js/tether.min.js"></script>
-<script src="../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="../../assets/plugins/bootstrap/js/tether.min.js"></script>
+<script src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <!-- slimscrollbar scrollbar JavaScript -->
-<script src="js/jquery.slimscroll.js"></script>
+<script src="../js/jquery.slimscroll.js"></script>
 <!--Wave Effects -->
-<script src="js/waves.js"></script>
+<script src="../js/waves.js"></script>
 <!--Menu sidebar -->
-<script src="js/sidebarmenu.js"></script>
+<script src="../js/sidebarmenu.js"></script>
 <!--stickey kit -->
-<script src="../assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
+<script src="../../assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
 <!--Custom JavaScript -->
-<script src="js/custom.min.js"></script>
-<!-- ============================================================== -->
-<!-- This page plugins -->
-<!-- ============================================================== -->
-<!-- chartist chart -->
-<script src="../assets/plugins/chartist-js/dist/chartist.min.js"></script>
-<script src="../assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>
-<!--c3 JavaScript -->
-<script src="../assets/plugins/d3/d3.min.js"></script>
-<script src="../assets/plugins/c3-master/c3.min.js"></script>
-<!-- Chart JS -->
-<script src="js/dashboard1.js"></script>
+<script src="../js/custom.min.js"></script>
 </body>
 
 </html>
