--- a/lite/Users/Exams.html
+++ b/lite/Users/Exams.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--this is a page that would get populated once they selet the kind of exam and number of questions-->
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +11,20 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.png">
-    <title>Drafts | Afternoon Prep</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
+    <title>Take Exam | Afternoon Prep</title>
     <!-- Bootstrap Core CSS -->
-    <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- chartist CSS -->
+    <link href="../../assets/plugins/chartist-js/dist/chartist.min.css" rel="stylesheet">
+    <link href="../../assets/plugins/chartist-js/dist/chartist-init.css" rel="stylesheet">
+    <link href="../../assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" rel="stylesheet">
+    <!--This page css - Morris CSS -->
+    <link href="../../assets/plugins/c3-master/c3.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
-    <link href="css/colors/blue.css" id="theme" rel="stylesheet">
+    <link href="../css/colors/blue.css" id="theme" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -51,11 +59,13 @@
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
 
                     <!-- Light Logo icon -->
-                    <img src="../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                    <img src="../../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
                 </b>
                     <!--End Logo icon -->
                     <!-- Logo text --><span>
 
+                         <!-- Light Logo text -->
+                    <!--<img src="../assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a>-->
                                             <span style="color: white;"> <b>Afternoon</b>Prep</span>
 
             </div>
@@ -85,7 +95,7 @@
                     <!-- Profile -->
                     <!-- ============================================================== -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../assets/images/users/1.jpg" alt="user" class="profile-pic m-r-10" />EkeneDee</a>
+                        <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../../assets/images/users/1.jpg" alt="user" class="profile-pic m-r-10" />EkeneDee</a>
                     </li>
                 </ul>
             </div>
@@ -151,11 +161,11 @@
                     <h3 class="text-themecolor m-b-0 m-t-0">Exams</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Exam Drafts</li>
+                        <li class="breadcrumb-item active">Exams</li>
                     </ol>
                 </div>
                 <div class="col-md-7 col-4 align-self-center">
-                    <a href="" class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">Exam Drafts</a>
+                    <a href="" class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">Create Exam</a>
                 </div>
             </div>
             <!-- ============================================================== -->
@@ -167,72 +177,48 @@
             <div class="row">
                 <div class="col-12">
                     <div class="card">
-                        <div class="row">
-                            <!-- column -->
-                            <div class="col-lg-12">
+                        <div class="card-block">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <h2 class="" style="float: left;"></h2>
+                                </div>
+                                <div class="col-md-6" style="align-content: right">
+                                    <h4 class="sidebar-nav" style="text-align: right;">Time Left: <span>01:43</span></h4>
+                                </div>
+                            </div>
+                            <form class="form-horizontal form-material" id="q-container">
+                                <div class="form-group q-block">
+                                    <label class="col-md-12">Question 1</label>
+                                    <div class="col-md-12" id="q-child">
+                                        <img src="#">
+                                        <p type="text" placeholder="Type the Question here" class="form-control form-control-line" required>
+                                        <div action="" class="form-group">
+                                            <!--<label> Select Answer</label><br>-->
+                                            <input type="radio" class="" value="A"> A<br>
+                                            <input type="radio" class="" value="B"> B<br>
+                                            <input type="radio" class="" value="C"> C <br>
+                                            <input type="radio" class="" value="D"> D <br>
+                                        </div>
+
+                                        <input type="radio" required>
+                                    </div>
+                                </div>
                                 <div class="card">
-                                    <div class="card-block">
-                                        <h4 class="card-title">Unpublished Exams</h4>
-                                        <div class="table-responsive">
-                                            <table class="table">
-                                                <thead>
-                                                <tr>
-                                                    <th>S/N</th>
-                                                    <th>Name</th>
-                                                    <th>Subject</th>
-                                                    <th>Type</th>
-                                                    <th>Year</th>
-                                                    <th>Date Modified</th>
-                                                    <th>Action</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                <tr>
-                                                    <td>1</td>
-                                                    <td>JAMB</td>
-                                                    <td>Physics</td>
-                                                    <td>OBJ</td>
-                                                    <td>2013</td>
-                                                    <td>10/11/2018</td>
-                                                    <td><a href="" ><button class="btn btn-danger">Edit</button></a></td>
-                                                    <td><a href="" ><button class="btn btn-danger">Delete</button></a></td>
-                                                </tr>
-                                                <tr>
-                                                    <td>2</td>
-                                                    <td>Deshmukh</td>
-                                                    <td>Gaylord</td>
-                                                    <td>@Ritesh</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>3</td>
-                                                    <td>Sanghani</td>
-                                                    <td>Gusikowski</td>
-                                                    <td>@Govinda</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>4</td>
-                                                    <td>Roshan</td>
-                                                    <td>Rogahn</td>
-                                                    <td>@Hritik</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>5</td>
-                                                    <td>Joshi</td>
-                                                    <td>Hickle</td>
-                                                    <td>@Maruti</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>6</td>
-                                                    <td>Nigam</td>
-                                                    <td>Eichmann</td>
-                                                    <td>@Sonu</td>
-                                                </tr>
-                                                </tbody>
-                                            </table>
+                                    <button class="btn btn-primary prevent-default" id="next">Next Question</button>
+                                </div>
+                                <div class="row">
+                                    <div class="form-group">
+                                        <div class="col-sm-12">
+                                            <button class="btn btn-dropbox prevent-default">Save</button>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-12">
+                                            <button class="btn btn-success prevent-default">Publish</button>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -264,20 +250,40 @@
 <!-- ============================================================== -->
 <!-- All Jquery -->
 <!-- ============================================================== -->
-<script src="../assets/plugins/jquery/jquery.min.js"></script>
+
+<script>
+    // $(".prevent-default").click(function (e){
+    //     e.preventDefault();
+    // });
+    $("#next").click( function () {
+        $(".q-block").append("<div>Me no like bad belle</div>");
+    });
+</script>
+<script src="../../assets/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap tether Core JavaScript -->
-<script src="../assets/plugins/bootstrap/js/tether.min.js"></script>
-<script src="../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="../../assets/plugins/bootstrap/js/tether.min.js"></script>
+<script src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <!-- slimscrollbar scrollbar JavaScript -->
-<script src="js/jquery.slimscroll.js"></script>
+<script src="../js/jquery.slimscroll.js"></script>
 <!--Wave Effects -->
-<script src="js/waves.js"></script>
+<script src="../js/waves.js"></script>
 <!--Menu sidebar -->
-<script src="js/sidebarmenu.js"></script>
+<script src="../js/sidebarmenu.js"></script>
 <!--stickey kit -->
-<script src="../assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
+<script src="../../assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
 <!--Custom JavaScript -->
-<script src="js/custom.min.js"></script>
+<script src="../js/custom.min.js"></script>
+<!-- ============================================================== -->
+<!-- This page plugins -->
+<!-- ============================================================== -->
+<!-- chartist chart -->
+<script src="../../assets/plugins/chartist-js/dist/chartist.min.js"></script>
+<script src="../../assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>
+<!--c3 JavaScript -->
+<script src="../../assets/plugins/d3/d3.min.js"></script>
+<script src="../../assets/plugins/c3-master/c3.min.js"></script>
+<!-- Chart JS -->
+<script src="../js/dashboard1.js"></script>
 </body>
 
 </html>
