--- a/lite/Users/index.html
+++ b/lite/Users/index.html
@@ -9,14 +9,20 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.png">
-    <title>Uploads | Afternoon Prep</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
+    <title>Dashboard | Afternoon Prep</title>
     <!-- Bootstrap Core CSS -->
-    <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- chartist CSS -->
+    <link href="../../assets/plugins/chartist-js/dist/chartist.min.css" rel="stylesheet">
+    <link href="../../assets/plugins/chartist-js/dist/chartist-init.css" rel="stylesheet">
+    <link href="../../assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.css" rel="stylesheet">
+    <!--This page css - Morris CSS -->
+    <link href="../../assets/plugins/c3-master/c3.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
-    <link href="css/colors/blue.css" id="theme" rel="stylesheet">
+    <link href="../css/colors/blue.css" id="theme" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -51,13 +57,14 @@
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
 
                     <!-- Light Logo icon -->
-                    <img src="../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                    <img src="../../assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
                 </b>
                     <!--End Logo icon -->
                     <!-- Logo text --><span>
 
                          <!-- Light Logo text -->
-                        <span style="color: white;"> <b>Afternoon</b>Prep</span>
+                    <!--<img src="../assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a>-->
+                        <span style="color: white;" class="light-logo"> <b>Afternoon</b>Prep</span>
             </div>
             <!-- ============================================================== -->
             <!-- End Logo -->
@@ -85,7 +92,7 @@
                     <!-- Profile -->
                     <!-- ============================================================== -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../assets/images/users/1.jpg" alt="user" class="profile-pic m-r-10" />EkeneDee</a>
+                        <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../../assets/images/users/1.jpg" alt="user" class="profile-pic m-r-10" />EkeneDee</a>
                     </li>
                 </ul>
             </div>
@@ -111,11 +118,18 @@
                         <ul>
                             <li><a href="Exams.html" class="waves-effect waves-dark"><span>Create Exam</span></a> </li>
                             <li><a href="active-exams.html" class="waves-effect waves-dark"><span>Active Exams</span></a> </li>
+                            <li><a href="exam-drafts.html" class="waves-effect waves-dark"><span>Exam Drafts</span></a> </li>
                         </ul>
                     </li>
                     <li> <a class="waves-effect waves-dark" href="uploads.html" aria-expanded="false"><i class="mdi mdi-upload"></i><span class="hide-menu">Uploads</span></a>
                     </li>
                     <li> <a class="waves-effect waves-dark" href="Users.html" aria-expanded="false"><i class="mdi mdi-account-multiple"></i><span class="hide-menu">Users</span></a>
+                    </li>
+                    <li> <a class="waves-effect waves-dark" href="icon-material.html" aria-expanded="false"><i class="mdi mdi-emoticon"></i><span class="hide-menu">Icons</span></a>
+                    </li>
+                    <li> <a class="waves-effect waves-dark" href="pages-blank.html" aria-expanded="false"><i class="mdi mdi-book-open-variant"></i><span class="hide-menu">Blank Page</span></a>
+                    </li>
+                    <li> <a class="waves-effect waves-dark" href="pages-error-404.html" aria-expanded="false"><i class="mdi mdi-help-circle"></i><span class="hide-menu">Error 404</span></a>
                     </li>
                 </ul>
                 <div class="text-center m-t-30">
@@ -148,14 +162,14 @@
             <!-- ============================================================== -->
             <div class="row page-titles">
                 <div class="col-md-5 col-8 align-self-center">
-                    <h3 class="text-themecolor m-b-0 m-t-0">Uploads</h3>
+                    <h3 class="text-themecolor">Dashboard</h3>
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Uploads</li>
+                        <li class="breadcrumb-item active">Dashboard</li>
                     </ol>
                 </div>
                 <div class="col-md-7 col-4 align-self-center">
-                    <a href="" class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">Create Exam</a>
+                    <a href="" class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down"> Create Exam</a>
                 </div>
             </div>
             <!-- ============================================================== -->
@@ -164,56 +178,88 @@
             <!-- ============================================================== -->
             <!-- Start Page Content -->
             <!-- ============================================================== -->
+            <div class="row container-fluid" style="">
+                <div class="card card-block ">
+                    <h5 class="col-md-3 col-sm-12 text-muted fa fa-users ">Active Users</h5>
+                    <h1 class="text-center">124242</h1>
+                </div>
+                <div class="card card-block">
+                    <h5 class="col-md-3 col-sm-12 text-muted fa fa-pencil">Active Exams</h5>
+                    <h1 class="text-center">124242</h1>
+                </div>
+                <div class="card card-block fa">
+                    <h5 class="col-md-3 col-sm-12 text-muted">Exams Taken</h5>
+                    <h1 class="text-center">124242</h1>
+                </div>
+                <div class="card card-block">
+                    <h5 class="col-md-3 col-sm-12 text-muted">Pass Rate</h5>
+                    <h1 class="text-center">69%</h1>
+                </div>
+
+
+            </div>
+            <div class="card">Add 4 cards here for statistics</div>
             <div class="row">
-                <div class="col-12">
+                <!-- column -->
+                <div class="col-lg-12">
                     <div class="card">
                         <div class="card-block">
-                            <div class="col-lg-8 col-xlg-9 col-md-7">
-                                <div class="card">
-                                    <!-- Nav tabs -->
-                                    <ul class="nav nav-tabs profile-tab" role="tablist">
-                                    <!-- Tab panes -->
-                                    <div class="tab-content">
-                                        <div class="tab-pane active" id="home" role="tabpanel">
-                                            <div class="card-block">
-                                                <div class="profiletimeline">
-                                                    <div class="sl-item">
-                                                        <div class="sl-left"> <img src="../assets/images/users/1.jpg" alt="user" class="img-circle"> </div>
-                                                        <div class="sl-right">
-                                                            <div><a href="#" class="link">Jumoke</a> <span class="sl-date">5 minutes ago</span>
-                                                                <p>assign a new task <a href="#"> Uploaded a new document</a></p>
-                                                                <div class="row">
-                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../assets/images/big/img1.jpg" alt="user" class="img-responsive radius"></div>
-                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../assets/images/big/img2.jpg" alt="user" class="img-responsive radius"></div>
-                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../assets/images/big/img3.jpg" alt="user" class="img-responsive radius"></div>
-                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../assets/images/big/img4.jpg" alt="user" class="img-responsive radius"></div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <hr>
-                                                    <div class="sl-item">
-                                                        <div class="sl-left"> <img src="../assets/images/users/1.jpg" alt="user" class="img-circle"> </div>
-                                                        <div class="sl-right">
-                                                            <div><a href="#" class="link">Chimezie</a> <span class="sl-date">5 minutes ago</span>
-                                                                <p>assign a new task <a href="#"> Uploaded a new image</a></p>
-                                                                <div class="row">
-                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../assets/images/big/img1.jpg" alt="user" class="img-responsive radius"></div>
-                                                                    <div class="col-lg-3 col-md-6 m-b-20"><img src="../assets/images/big/img4.jpg" alt="user" class="img-responsive radius"></div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                            <h4 class="card-title">Registered Users</h4>
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead>
+                                    <tr>
+                                        <th>S/N</th>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
+                                        <th>Username</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Deshmukh</td>
+                                        <td>Prohaska</td>
+                                        <td>@Genelia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Deshmukh</td>
+                                        <td>Gaylord</td>
+                                        <td>@Ritesh</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>Sanghani</td>
+                                        <td>Gusikowski</td>
+                                        <td>@Govinda</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Roshan</td>
+                                        <td>Rogahn</td>
+                                        <td>@Hritik</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>Joshi</td>
+                                        <td>Hickle</td>
+                                        <td>@Maruti</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Nigam</td>
+                                        <td>Eichmann</td>
+                                        <td>@Sonu</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <!-- ============================================================== -->
             <!-- End PAge Content -->
             <!-- ============================================================== -->
@@ -241,20 +287,77 @@
 <!-- ============================================================== -->
 <!-- All Jquery -->
 <!-- ============================================================== -->
-<script src="../assets/plugins/jquery/jquery.min.js"></script>
+<script src="../../assets/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap tether Core JavaScript -->
-<script src="../assets/plugins/bootstrap/js/tether.min.js"></script>
-<script src="../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="../../assets/plugins/bootstrap/js/tether.min.js"></script>
+<script src="../../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <!-- slimscrollbar scrollbar JavaScript -->
-<script src="js/jquery.slimscroll.js"></script>
+<script src="../js/jquery.slimscroll.js"></script>
 <!--Wave Effects -->
-<script src="js/waves.js"></script>
+<script src="../js/waves.js"></script>
 <!--Menu sidebar -->
-<script src="js/sidebarmenu.js"></script>
+<script src="../js/sidebarmenu.js"></script>
 <!--stickey kit -->
-<script src="../assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
+<script src="../../assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
 <!--Custom JavaScript -->
-<script src="js/custom.min.js"></script>
+<script src="../js/custom.min.js"></script>
+<!-- ============================================================== -->
+<!-- This page plugins -->
+<!-- ============================================================== -->
+<!-- chartist chart -->
+<script src="../../assets/plugins/chartist-js/dist/chartist.min.js"></script>
+<script src="../../assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js"></script>
+<!--c3 JavaScript -->
+<script src="../../assets/plugins/d3/d3.min.js"></script>
+<script src="../../assets/plugins/c3-master/c3.min.js"></script>
+<!-- Chart JS -->
+<script src="../js/dashboard1.js"></script>
+<style>
+    .beast{
+        color:#fff;
+        max-width:800px;
+        margin: 100px auto 0;
+        text-align: center;
+        display: table;
+    }
+    .counter {
+        display: table-cell;
+        margin:1.5%;
+        font-size:50px;
+        background-color: #FF6F6F;
+        width:200px;
+        border-radius: 50%;
+        height:200px;
+        vertical-align: middle;
+    }
+</style>
+<script>
+    $('.counter').each(function() {
+        var $this = $(this),
+            countTo = $this.attr('data-count');
+
+        $({ countNum: $this.text()}).animate({
+                countNum: countTo
+            },
+
+            {
+
+                duration: 2000,
+                easing:'linear',
+                step: function() {
+                    $this.text(Math.floor(this.countNum));
+                },
+                complete: function() {
+                    $this.text(this.countNum);
+                    //alert('finished');
+                }
+
+            });
+
+
+
+    });
+</script>
 </body>
 
 </html>
