--- a/lite/Users/Exams.html
+++ b/lite/Users/Exams.html
@@ -183,7 +183,7 @@
                                     <h2 class="" style="float: left;"></h2>
                                 </div>
                                 <div class="col-md-6" style="align-content: right">
-                                    <h4 class="sidebar-nav" style="text-align: right;">Time Left: <span>01:43</span></h4>
+                                    <h4 class="sidebar-nav" style="text-align: right;">Time Left: <span>01:43:56</span></h4>
                                 </div>
                             </div>
                             <form class="form-horizontal form-material" id="q-container">
@@ -191,7 +191,7 @@
                                     <label class="col-md-12">Question 1</label>
                                     <div class="col-md-12" id="q-child">
                                         <img src="#">
-                                        <p type="text" placeholder="Type the Question here" class="form-control form-control-line" required>
+                                        <p type="text" class="form-control form-control-line" required>What is the size of an olymic size football</p>
                                         <div action="" class="form-group">
                                             <!--<label> Select Answer</label><br>-->
                                             <input type="radio" class="" value="A"> A<br>
